fixed wording and spacing for desktop view of index page

--- a/css/index.css
+++ b/css/index.css
@@ -23,8 +23,14 @@ main {
   -ms-grid-column: 1;
   grid-area: textContent;
   display: -ms-grid;
+  padding-top: 40px;
+  padding-bottom: 40px;
   display: grid;
       grid-template-areas: "me "
+}
+
+.left div h1 {
+  margin-bottom: 15px;
 }
 
 .right {
@@ -37,6 +43,7 @@ main {
   .left {
     -ms-grid-row: 2;
     -ms-grid-column: 1;
+    padding: 0px;
   }
   .right {
     -ms-grid-row: 1;
@@ -51,7 +58,7 @@ main {
 
 h1 {
   font-size: 3.875rem;
-  /*margin-top: 0px;*/
+  /*margin-bottom: 0px;*/
 }
 
 h2 {
